fix alignment of Label and button in name property on edit content type

--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/name-property/name-property.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/name-property/name-property.component.scss
@@ -5,6 +5,7 @@
     color: $label-color;
     margin-top: $spacing-1;
     display: flex;
+    align-items: center;
 
     dot-copy-link {
         margin-left: $spacing-1;
